<resources>
    <string name="app_name">AirConditionDetector</string>
    <string name="title_home">空氣污染</string>
    <string name="title_search">Search</string>

    <string name="title_site_id">序號</string>
    <string name="title_site_name">站名</string>
    <string name="title_county">縣市</string>
    <string name="title_pm25">PM 2.5</string>
    <string name="title_status">狀態</string>

    <string name="search_hint">請輸入「站名」</string>
    <string name="search_hint_message">輸入「站名」\n查詢該地區空汙資訊</string>
    <string name="search_empty_result_message">找不到「%s」\n相關的空汙資訊</string>
</resources>